--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <html>
     <head>
-
+        <title>Room 3 website</title>
+        <script src="js/router.js"></script>
     </head>
     <body>
-        
+        <main>
+            <!-- this is where we insert articles -->
+        </main>
     </body>
 </html>
