--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
         <script src="js/router.js"></script>
+
+        <title>compsci is good</title>
     </head>
     <body>
         <main>
