--- a/index.html
+++ b/index.html
@@ -6,10 +6,23 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
         <script src="js/router.js"></script>
-
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>compsci is good</title>
     </head>
     <body>
+        <nav class = 'navbar navbar-expand-sm bg-danger navbar-dark' id ="navbar">
+            <!-- Toggler/collapsibe Button -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <!-- Navbar links-->
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ul class = 'navbar-nav  ml-auto'>
+                    <li class="nav-item"><a class = 'nav-link' href="#article">Pages</a></li>
+                    <li class="nav-item"><a class = 'nav-link' href="#about_us">About Us</a></li>
+                </ul>
+            </div>
+        </nav>
         <main>
             <!-- this is where we insert articles -->
         </main>
