--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <!-- Navbar links-->
             <div class="collapse navbar-collapse" id="collapsibleNavbar">
                 <ul class = 'navbar-nav  ml-auto'>
-                    <li class="nav-item"><a class = 'nav-link' id = "home" href="">home</a></li>
+                    <li class="nav-item"><a class = 'nav-link' id = "home" href="#home">home</a></li>
                     <li class="nav-item"><a class = 'nav-link' id = "education" href="#education">Education</a></li>
                     <li class="nav-item"><a class = 'nav-link' id = "flood-prediction" href="#flood_prediction">Flood Prediction</a></li>
                     <li class="nav-item"><a class = 'nav-link' id = "medicine" href="#medicine">Medicine</a></li>
