--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <title>compsci is good</title>
     </head>
     <body>
-        <nav class = 'navbar navbar-expand-sm bg-danger navbar-dark' id ="navbar">
+        <nav class = 'navbar navbar-expand-sm bg-primary navbar-dark' id ="navbar">
             <!-- Toggler/collapsibe Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
