--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
+        
+        <link rel="stylesheet" href = 'css/style.css'>
         <script src="js/router.js"></script>
+        <script src = "js/index.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>compsci is good</title>
     </head>
     <body>
-        <nav class = 'navbar navbar-expand-sm bg-primary navbar-dark' id ="navbar">
+        <nav class = 'navbar navbar-expand-sm navbar-dark' id ="navbar">
             <!-- Toggler/collapsibe Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
