--- a/Social-Media.html
+++ b/Social-Media.html
@@ -29,7 +29,7 @@
             
             <div class="d-flex flex-column">
                 <div>
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/7/72/Social_Media_Marketing_Strategy.jpg"
+                    <img class="img-fluid" src="https://upload.wikimedia.org/wikipedia/commons/7/72/Social_Media_Marketing_Strategy.jpg"
                         alt="Social Media logos on a keyboard"  style="padding-top: 20px;padding-left: 20px;padding-right: 20px;width: 500px; height: 300px;">
                 </div>
                 <div>
