--- a/index.html
+++ b/index.html
@@ -1,36 +1,85 @@
 <html>
-    <head>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-        
-        <link rel="stylesheet" href = 'css/style.css'>
-        <script src="js/router.js"></script>
-        <script src = "js/index.js"></script>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>compsci is good</title>
-    </head>
-    <body>
-        <nav class = 'navbar navbar-expand-sm navbar-dark' id ="navbar">
-            <!-- Toggler/collapsibe Button -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <!-- Navbar links-->
-            <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                <ul class = 'navbar-nav  ml-auto'>
-                    <li class="nav-item"><a class = 'nav-link' id = "home" href="#home">home</a></li>
-                    <li class="nav-item"><a class = 'nav-link' id = "education" href="#education">Education</a></li>
-                    <li class="nav-item"><a class = 'nav-link' id = "flood-prediction" href="#flood_prediction">Flood Prediction</a></li>
-                    <li class="nav-item"><a class = 'nav-link' id = "medicine" href="#medicine">Medicine</a></li>
-                    <li class="nav-item"><a class = 'nav-link' id = "social-media" href="#social_media">Social Media</a></li>
-                    <li class="nav-item"><a class = 'nav-link' id = "about-us" href="#about_us">About Us</a></li>
-                </ul>
+
+<head>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
+
+    <link rel="stylesheet" href='css/style.css'>
+    <script src="js/router.js"></script>
+    <script src="js/index.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>compsci is good</title>
+
+</head>
+
+<body>
+    <nav class='navbar navbar-expand-sm navbar-dark' id="navbar">
+        <!-- Toggler/collapsibe Button -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <!-- Navbar links-->
+        <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class='navbar-nav nav-pages ml-auto'></ul>
+            <ul class='navbar-nav'>
+                <li class="nav-item"><a class='nav-link' id="about-us" href="#about_us">About Us</a></li>
+            </ul>
+        </div>
+    </nav>
+    <div class='title container mx-auto p-5'>
+        <img src='images/title.svg' alt='Computer Science is GOOD'>
+    </div>
+
+    <div id = "article-cards" class="container py-3">
+        <div class="card">
+            <div class="row ">
+
+                <div class="col-md-7 px-3">
+                    <div class="card-block px-6">
+                        <h4 class="card-title">Title</h4>
+                        <p class="card-text">
+                            text
+                        </p>
+                        <br>
+                        <a href="#article-body" class="mt-auto btn btn-primary  ">Read More</a>
+                    </div>
+                </div>
+                <!-- Carousel start -->
+                <div class="col-md-5">
+                    <div id="CarouselTest" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators"></ol>
+                        <div class="carousel-inner">
+                            <a class="carousel-control-prev" href="#CarouselTest" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#CarouselTest" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <!-- End of carousel -->
             </div>
-        </nav>
-        <main>
-            <!-- this is where we insert articles -->
-        </main>
-    </body>
+        </div>
+    </div>
+
+    <article id = "article-container" class="container py-3">
+        <!-- this is where we insert articles -->
+            <div class="card">
+                <h4 class="card-title"></h4>
+                <div id="article-body" class="card-text"></div>
+            </div>
+    </article>
+</body>
+
 </html>
