--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
         <!-- Navbar links-->
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class='navbar-nav nav-pages ml-auto'></ul>
-            <ul class='navbar-nav'>
+            <ul class='navbar-nav nav-about-us'>
                 <li class="nav-item"><a class='nav-link' id="about-us" href="#about_us">About Us</a></li>
             </ul>
         </div>
     </nav>
     <div class='title container mx-auto p-5'>
-        <img src='images/title.svg' alt='Computer Science is GOOD'>
+        <img src='title.svg' alt='Computer Science is GOOD'>
     </div>
 
     <div id = "article-cards" class="container py-3">
@@ -44,10 +44,8 @@
 
                 <div class="col-md-7 px-3">
                     <div class="card-block px-6">
-                        <h4 class="card-title">Title</h4>
-                        <p class="card-text">
-                            text
-                        </p>
+                        <h4 class="card-title"></h4>
+                        <p class="card-text"></p>
                         <br>
                         <a href="#article-body" class="mt-auto btn btn-primary  ">Read More</a>
                     </div>
@@ -80,6 +78,8 @@
                 <div id="article-body" class="card-text"></div>
             </div>
     </article>
+
+    <div id = "about-us-container" class = "container"></div>
 </body>
 
 </html>
