Fixed author_img cropping

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
                 <!-- Carousel start -->
                 <div class="col-md-5">
-                    <div id="CarouselTest" class="carousel slide" data-ride="carousel">
+                    <div id="CarouselTest" class="carousel slide" data-ride="carousel" data-interval = "false">
                         <ol class="carousel-indicators"></ol>
                         <div class="carousel-inner">
                             <a class="carousel-control-prev" href="#CarouselTest" role="button" data-slide="prev">
