--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
     <div id = "article-cards" class="container py-3">
         <div class="card">
             <div class="row ">
-
                 <div class="col-md-7 px-3">
                     <div class="card-block px-6">
                         <h4 class="card-title"></h4>
@@ -73,7 +72,7 @@
 
     <article id = "article-container" class="container py-3">
         <!-- this is where we insert articles -->
-            <div class="card">
+            <div class="card p-3">
                 <h4 class="card-title"></h4>
                 <div id="article-body" class="card-text"></div>
             </div>
