Added author button

--- a/index.html
+++ b/index.html
@@ -73,12 +73,15 @@
     <article id = "article-container" class="container py-3">
         <!-- this is where we insert articles -->
             <div class="card p-3">
-                <h4 class="card-title"></h4>
+                <h1 class="card-title mx-auto"></h1>
                 <div id="article-body" class="card-text"></div>
+                <div class="article-author ml-auto">
+                    <p class ="my-1">Written by</p><a href = '' class="mt-auto btn btn-primary"></a>
+                </div>
             </div>
     </article>
 
-    <div id = "about-us-container" class = "container"></div>
+    <div id = "about-us-container" class = "container mb-5"></div>
 </body>
 
 </html>
