Split index.js into 5 files.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href='css/style.css'>
-    <script src="js/router.js"></script>
-    <script src="js/index.js"></script>
+    <script defer src="js/index.js" type="module"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>compsci is good</title>
 
@@ -38,7 +37,7 @@
         <img src='title.svg' alt='Computer Science is GOOD'>
     </div>
 
-    <div id = "article-cards" class="container py-3">
+    <div id = "article-navbar" class="container py-3">
         <div class="card">
             <div class="row ">
                 <div class="col-md-7 px-3">
