Fixed carousel images

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href='css/style.css'>
+    <link rel="stylesheet" href='css/carousel.css'>
     <script defer src="js/index.js" type="module"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>compsci is good</title>
@@ -45,14 +46,15 @@
                         <h4 class="card-title"></h4>
                         <p class="card-text"></p>
                         <br>
-                        <a href="#article-body" class="mt-auto btn btn-primary  ">Read More</a>
+                        <a href="#article-container" class="mt-auto btn btn-primary  ">Read More</a>
                     </div>
                 </div>
                 <!-- Carousel start -->
                 <div class="col-md-5">
-                    <div id="CarouselTest" class="carousel slide" data-ride="carousel" data-interval = "false">
+                    <div id="CarouselTest" class="carousel" data-ride="carousel" data-interval = "false">
                         <ol class="carousel-indicators"></ol>
                         <div class="carousel-inner">
+                            <div class = "carousel-images"></div>
                             <a class="carousel-control-prev" href="#CarouselTest" role="button" data-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                 <span class="sr-only">Previous</span>
