possible fix for 404 error

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <link rel="stylesheet" href='css/style.css'>
     <link rel="stylesheet" href='css/carousel.css'>
     <script defer src="js/index.js" type="module"></script>
+    <script src="js/article.js"></script>
+    <script src="js/authors.js"></script>
+    <script src="js/navbar.js"></script>
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>compsci is good</title>
 
